testing/tests/00main/errors/wrong_ret_type_1.sasc
//! BUILD_EXIT_CODE=3

fn main() -> i32 {
	return 0u32;
}